Se agrega variable color dark

--- a/src/admin/components/Calendar/styles/variables.css
+++ b/src/admin/components/Calendar/styles/variables.css
@@ -7,6 +7,7 @@
   --light-green: #c5f198;
   --hover-green: #66b417;
   --bg-green: #f8ffec;
+  --bg-dark: #2c2e35;
 
   /* Espaciado */
   --spacing-xs: 0.25rem;
