--- a/src/admin/components/Calendar/styles/general.css
+++ b/src/admin/components/Calendar/styles/general.css
@@ -1,3 +1,18 @@
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.container-fluid {
+  overflow: hidden;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+  max-width: 100%;
+  width: 100%;
+}
+
+
 .schedule-page {
   padding: 2rem;
   height: calc(100vh - 64px);
